--- a/style.css
+++ b/style.css
@@ -44,3 +44,32 @@ padding-right: 5%;
 .dream-area-part img{
     width: 100%;
 }
+#experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    padding: 5%;
+}
+.experience-area-part{
+    display: flex;
+}
+.experience-area-part h3{
+    color: orangered;
+}
+.experience-area-part div{
+    box-shadow: 5px 7px 40px red;
+    height: 80%;
+    margin: 15px;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,red,tomato);
+    border-image-slice: 1;
+    padding: 10px;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg,rgb(98, 107, 231),rgb(23, 59, 99));
+    border-image-slice: 1;
+    padding: 10px;
+}
